--- a/src/www/content/articles/system-design/scalability.mdx
+++ b/src/www/content/articles/system-design/scalability.mdx
@@ -1,4 +1,4 @@
----
+
 title: What is Scalability? The Definitive Guide
 publishedAt: "2023-12-24"
 description: In this installment of Series System Design, we delve into the fundamental concept of scalability. Discover the essence of scalability and its pivotal role in designing systems that can effortlessly expand and handle increased demands. Uncover the key principles behind creating scalable architectures as we explore the crucial aspects that define scalability in the realm of system design.
@@ -6,7 +6,155 @@ category: System Design
 tags:
   - title: scalability
 links:
-  coverImg: https://i.postimg.cc/cLRn4LC6/system-design.png
----
+  coverImg: https://i.postimg.cc/NM5Z2cXP/scalability.jpg
 
-## The context - why do we ever need the scalability ?
+## What is Scalability?
+
+Scalability - it's a buzzword you often hear in the tech world, but what does it really mean, and why does it matter? In simple terms, scalability refers to a system's ability to handle growth gracefully. Whether it's a network, a software application, or a process, scalability is crucial for ensuring smooth operation as demands increase over time. Think of it like a highway – a scalable system is like a highway that can accommodate more and more cars without causing a traffic jam.
+
+Imagine you have a popular app or website. As more users start using it, the system needs to be able to accommodate the increased traffic without slowing down or crashing. This ability to scale up efficiently is what separates successful systems from those that struggle to keep up.
+
+## Why Does Scalability Matter?
+
+Firstly, poor scalability can lead to performance issues. Imagine you have an online store. At first, you might have a few customers browsing your website. But as your business grows, more and more people start visiting your store online. If your website can't handle the increased traffic, it might crash or become painfully slow. That's where scalability comes in.
+
+Secondly, scalability impacts costs. A system that can't handle growth efficiently may require costly upgrades or even complete overhauls down the line. By investing in scalable technology from the start, businesses can save money in the long run and avoid disruptions to their operations.
+
+A scalable system ensures that as your business grows, your website can handle the extra visitors without any hiccups. It's crucial for providing a smooth experience to your customers and keeping your business running smoothly.
+
+## Why Systems Fail to Scale
+
+When we say that a system is unscalable, we usually mean that the additional cost of coping with a given increase in traffic or size is excessive, or that it cannot cope at this increased level at all. Cost may be quantified in many ways, including but not limited to response time, processing overhead, space, memory, or even money. A system that does not scale well adds to labour costs or harms the quality of service. It can delay or deprive the user of revenue opportunities. Eventually, it must be replaced.
+
+Now, not all systems are created equal. Some struggle to keep up when things get busy. Here are some common reasons why:
+
+- <b>Wastefulness:</b> Like a leaky bucket, some systems waste resources doing the
+  same thing over and over again. It's like spinning your wheels without moving forward.
+
+- <b>Bad Scheduling:</b> Imagine if traffic lights were randomly switching colors
+  – chaos, right? Poor scheduling in systems can lead to bottlenecks and delays.
+
+- <b>Limited Resources:</b> Just like a well can only hold so much water, some systems
+  hit a ceiling because of their design. They simply can't handle any more.
+
+Now, let's delve deeper into the various types of scalability and how they impact our system.
+
+## Types of Scalability
+
+### 1. Load Scalability
+
+Picture a busy highway – some days, it flows smoothly, while on others, it's a gridlocked mess. This is like load scalability in systems. A system with good load scalability can handle different levels of traffic without breaking a sweat. But what happens when it doesn't?
+
+Think of your internet connection during peak hours. Ever noticed how it slows down when everyone's online? That's because the system is struggling to manage the heavy load of users.
+
+There are some factors that affect Load Scalability:
+
+- <b>Resource Scheduling:</b> Imagine if traffic lights randomly switched colors
+  – chaos, right? Similarly, poor scheduling in systems can lead to bottlenecks and
+  delays.
+
+- <b>Self-Expansion:</b> Some systems create their own problems by making resources
+  harder to access as demand grows. It's like a vicious cycle that slows everything
+  down.
+
+- <b>Lack of Parallelism:</b> Just like having multiple lanes on a highway helps
+  traffic flow, parallel processing in systems can make tasks run smoother. But if
+  a system can't use parallelism effectively, it's like having a highway with only
+  one lane.
+
+### 2. Space Scalability
+
+Now, let's talk about space – not outer space, but memory space. Imagine you have a digital library, and as more books are added to it, you don't want the memory it requires to skyrocket. Space scalability ensures that as your library grows, the memory it needs doesn't become unbearable. This is crucial because excessive memory requirements can lead to problems like slow performance or even system crashes. Techniques like compression or using sparse matrix methods can help manage memory efficiently.
+
+### 3. Space-Time Scalability
+
+Now, let's consider a scenario where you're using a search engine. As more and more people start using it and the number of web pages it needs to search through increases, you want it to remain speedy and efficient. Space-time scalability ensures that the system functions smoothly regardless of its size. For instance, a search engine using a linear search method might struggle as it grows, while one using more advanced techniques like hash tables or balanced trees could handle growth much better.
+
+### 4. Structural Scalability
+
+Structural scalability focuses on the system's ability to handle growth without running into structural barriers. Think of it like building a house - you want to make sure the foundation is strong enough to support additional floors if needed. In technology, this means ensuring that the system's implementation or standards don't hinder its growth.
+
+Load scalability may be improved by modifying scheduling rules, avoiding self-expansion, or exploiting parallelism. By contrast, the other forms of scalability we have described are inherent in architectural characteristics (such as word length or the choice of data structures) or standards (such as the number of bits in certain fields) that may be difficult or impossible to change.
+
+We have touched upon its various dimensions – from handling heavy traffic to managing memory efficiently. Going forward, let's zoom in further and uncover how scalability plays out over long distances and how different types of scalability intertwine.
+
+## Scalability over Long Distances
+
+### Distance Scalability
+
+Imagine sending a message to a friend across the globe. Now, think about sending that same message to someone just across the street. Distance scalability is like having a messaging system that works seamlessly regardless of how near or far your recipient is.
+
+### Speed/Distance Scalability
+
+Now, let's add speed to the equation. Picture sending that message at lightning speed or at a leisurely pace. Speed/distance scalability ensures that your messaging system doesn't falter whether you're sending messages quickly or slowly, over long distances or short ones.
+
+The TCP/IP protocol, a cornerstone of the internet, initially struggled with speed/distance scalability. Its sliding window protocol, responsible for managing data flow, showed weaknesses over long distances. But fear not – protocols like SSCOP emerged, sending periodic updates to improve performance over varying speeds and distances.
+
+### Independence and Overlap Between Scalability Types
+
+As we delve deeper, we discover that scalability types aren't always independent. Poor space or space-time scalability might lead to memory management issues, impacting load scalability. Similarly, a system with excellent space-time scalability may suffer from poor load scalability due to scheduling or parallelism woes.
+
+Consider structural scalability and load scalability. While the latter doesn't directly influence the former, a system's inability to utilize resources like multiple processors can hinder load scalability due to poor structural design choices.
+
+However, not all systems are created equal when it comes to scalability. Some face challenges known as "unproductive cycles," where processes get stuck in repetitive loops without achieving meaningful progress. we will delve into the qualitative analysis of load scalability, exploring examples and solutions that shed light on this important concept.
+
+## Unproductive Cycles: The Culprit Behind Inefficiency
+
+Imagine a scenario where a process within a system keeps circling through a sequence of states, consuming resources without making significant headway towards its intended goals. These repetitive loops, termed unproductive cycles, are common in various systems and can severely impact performance. Classical examples include scenarios like waiting indefinitely for locks in multiprocessor systems or contention over resources like the Ethernet bus. Even seemingly simple problems like the dining philosophers dilemma can lead to inefficient resource usage if not properly managed.
+
+### Identifying Inefficiencies: Signs of Poor Load Scalability
+
+One telltale sign of poor load scalability is when a system's performance degrades significantly as the demand on it increases beyond its rated capacity. This could happen due to inefficient resource utilization, where processes hold onto resources unnecessarily while idling or waiting. At lower volumes of activity, these inefficiencies might go unnoticed, but they become glaring issues as the workload ramps up.
+
+### Solutions Through Optimization
+
+Addressing the challenges of load scalability often involves optimizing system behavior and resource allocation. One approach is to reduce the occurrence of unproductive cycles by refining the system's design or introducing controls to manage resource contention effectively. For example, in the dining philosophers problem, implementing mechanisms for controlling access to the dining room can prevent deadlock situations and improve overall efficiency.
+
+### The Role of Job Scheduling Rules
+
+Another avenue for improving load scalability lies in the judicious selection of job scheduling rules. By carefully orchestrating the order in which tasks are executed, it's possible to mitigate bottlenecks and distribute the workload more evenly across the system. This can help prevent situations where certain processes monopolize resources, leading to inefficient utilization and decreased scalability.
+
+When a system's load scalability is poor, it can lead to inefficiencies and bottlenecks, hindering performance. Let's delve into some common issues and explore ways to enhance load scalability effectively.
+
+## Improving load scalability
+
+Now let's go back to our previous example of online store. Your online store represents our system, and the shoppers are tasks or processes within that system. Now, scalability is akin to ensuring your online store can accommodate a growing number of shoppers without glitches or slowdowns. Just as you'd need to manage resources efficiently to handle more shoppers, systems must do the same to manage heavier loads effectively.
+
+So, let's dive into the common challenges that can hinder scalability and explore how we can overcome them:
+
+1. <b>Identifying Unproductive Cycles:</b> Sometimes, systems get stuck in repetitive,
+   unproductive cycles, much like shoppers endlessly wandering aisles without making
+   purchases. These cycles waste resources and slow down operations. By identifying
+   and breaking these cycles, we can free up resources for more meaningful tasks,
+   improving efficiency.
+
+2. <b> Reducing Sojourn Time:</b> Picture the time shoppers spend waiting in line
+   to checkout. The longer the wait, the less satisfied they become. Similarly, in
+   systems, reducing the time spent in unproductive cycles can speed up operations
+   and enhance scalability, ensuring smoother experiences for users.
+
+3. <b>Preventing Deadlocks:</b> Just as checkout lanes can become blocked when shoppers
+   clash with their carts, systems can face deadlocks when resources are tangled
+   up in conflicting demands. Implementing smart scheduling rules and access control
+   mechanisms can help prevent these deadlocks and maintain smooth operation.
+
+4. <b>Understanding Scalability Impediments:</b> Consider the shelves in your store.
+   If they're overflowing with products, it becomes challenging to add more without
+   causing chaos. Similarly, certain characteristics of systems can impede scalability.
+   By understanding these obstacles, we can find ways to overcome them and ensure
+   seamless operation even as demand grows.
+
+- <b>Optimizing Scheduling:</b> Efficient scheduling is like ensuring your checkout
+  lanes are staffed appropriately during peak hours. By fine-tuning scheduling rules,
+  we can allocate resources more effectively and improve overall system performance,
+  minimizing wait times for shoppers.
+- <b>Harnessing Asynchronicity:</b> Just as shoppers can browse different sections
+  of your store simultaneously, systems can benefit from parallel execution. By leveraging
+  asynchronicity, we can handle multiple tasks concurrently, increasing efficiency
+  and throughput.
+
+## Conclusion
+
+In conclusion, tackling load scalability issues is like playing a game of whack-a-mole with your computer system – every time you think you've squashed one problem, another one pops up! But fear not, by identifying those pesky cycles, making clever tweaks, and embracing solutions, we can outsmart those bottlenecks and keep our systems running smoothly.
+
+So, remember, in the quest for better load scalability, expect the unexpected, embrace the chaos, and keep those bytes flowing freely! After all, in the world of tech, there's never a dull moment – but hey, at least it keeps us on our toes! Happy scaling, and may your systems forever be as smooth as a well-oiled robot on roller skates!
