--- a/src/www/content/articles/system-design/scalability.mdx
+++ b/src/www/content/articles/system-design/scalability.mdx
@@ -1,12 +1,13 @@
-
-title: What is Scalability? The Definitive Guide
-publishedAt: "2023-12-24"
+---
+title: Understanding Scalability - Why It Matters in Technology
+publishedAt: "2024-03-29"
 description: In this installment of Series System Design, we delve into the fundamental concept of scalability. Discover the essence of scalability and its pivotal role in designing systems that can effortlessly expand and handle increased demands. Uncover the key principles behind creating scalable architectures as we explore the crucial aspects that define scalability in the realm of system design.
 category: System Design
 tags:
   - title: scalability
 links:
   coverImg: https://i.postimg.cc/NM5Z2cXP/scalability.jpg
+---
 
 ## What is Scalability?
 
